add dropdown for notes and style

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="allTasks">
+                    <button id="Completed">
                         Completed
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="allTasks">
+                    <button id="Archieve">
                         Archieve
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="allTasks">
+                    <button id="Pending">
                         Pending
                     </button>
                 </div>
