sync functionality added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
 <body>
 
     <div id="wrapper">
+		<header>
+			<nav>
+				<div id="logo">
+					<h1> Task Manager </h1>
+				</div>
+				<div id="optionBtn">
+					<div id="syncBtnDiv">
+						<button id="syncBtn">
+							<i class="fa fa-refresh" aria-hidden="true"></i>
+							Sync
+						</button>
+					</div>
+					<div id="themeBtnDiv">
+						<select id="themeBtn">
+							<option> Dark </option>
+							<option> Light </option>						
+						</select>
+					</div>
+				</div>				
+			</nav>
+		</header>
         <div id="addTaskContainer">
             <form name="taskForm">
                 <div id="taskTextDiv">
