--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 						</button>
 					</div>
 					<div id="themeBtnDiv">
-						<select id="themeBtn">
-							<option> Dark </option>
-							<option> Light </option>						
+						<select id="themeSelector">
+							<option value="light">Light Theme</option>
+							<option value="dark">Dark Theme</option>
+							<option value="blue">Blue Theme</option>
+							<option value="green">Green Theme</option>
+							<option value="retro">Retro Theme</option>
 						</select>
 					</div>
 				</div>				
