--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 
             </div>
         </div>
+		<footer>
+			<p>
+				Task Manager &copy; 2025
+			</p>
+		</footer>
     </div>
 
     <script src="./scripts/scripts.js"></script>
