added filter logics

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="Completed">
+                    <button id="completed">
                         Completed
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="Archieve">
+                    <button id="archieve">
                         Archieve
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="Pending">
+                    <button id="pending">
                         Pending
                     </button>
                 </div>
