added category input

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <div id="taskTextDiv">
                     <input type="text" name="taskText" required id="taskText" placeholder="Add task here">
                 </div>
+				<div id="categoryDiv">
+					<input type="text" name="category" id="category" placeholder="category (eg: Office, morning, etc.)">
+				</div>
                 <div id="taskNoteDiv">
                     <textarea rows="4" placeholder="add notes (optional)" name="taskNote" id="taskNote"></textarea>
                 </div>
