filter button added

--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
         <div id="tasklist">
             <div id="filters">
                 <div class="filter">
-                    <button id="allTasks">
+                    <button id="allTasks" class="filterButton" data-param="allTasks">
                         All
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="completed">
+                    <button id="completed" class="filterButton" data-param="completed">
                         Completed
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="archieve">
+                    <button id="archieve" class="filterButton" data-param="archieve">
                         Archieve
                     </button>
                 </div>
                 <div class="filter">
-                    <button id="pending">
+                    <button id="pending" class="filterButton" data-param="pending">
                         Pending
                     </button>
                 </div>
